# datafix

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  Setup.hs  baseline.ticky  cabal.haskell-ci  cabal.project  datafix-benchmark.ps  datafix.cabal  datafix.nix  datafix.ticky  default.nix  doc-index.html  index.html  shell.nix  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-7.yaml  stack-lts-9.yaml  stack.yaml  test.hs  upload-docs.sh  worklist.cabal
.github/workflows/: haskell-ci.yml
.travis/: after_success.sh  before_install.sh  deploy_key.enc  install.sh  script.sh
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  (+6 more)
bench/: Main.hs
benchmark/: Main.hs
datafix/: CHANGELOG.md  README.md  datafix.cabal
datafix-0.0.0.1/: Datafix-Common.html  Datafix-Denotational.html  Datafix-Description.html  Datafix-Explicit.html  Datafix-MonoMap.html  Datafix-NodeAllocator.html  Datafix-ProblemBuilder.html  Datafix-Tutorial.html  Datafix-Utils-Constraints.html  Datafix-Utils-TypeLevel.html  Datafix-Worklist-Denotational.html  Datafix-Worklist-Graph-Dense.html  Datafix-Worklist-Graph-Sparse.html  Datafix-Worklist-Graph.html  Datafix-Worklist-Internal.html  Datafix-Worklist.html  Datafix.html  datafix.haddock  datafix.txt  doc-index.html  index.html
datafix-0.0.0.1/src/: Datafix.Description.html  Datafix.Entailments.html  Datafix.IntArgsMonoMap.html  Datafix.IntArgsMonoSet.html  Datafix.MonoMap.html  Datafix.NodeAllocator.html  Datafix.ProblemBuilder.html  Datafix.Tutorial.html  Datafix.Utils.GrowableVector.html  Datafix.Utils.TypeLevel.html  Datafix.Worklist.Denotational.html  Datafix.Worklist.Graph.Dense.html  Datafix.Worklist.Graph.Sparse.html  Datafix.Worklist.Graph.html  Datafix.Worklist.Internal.html  Datafix.Worklist.html  Datafix.html
datafix-0.0.0.2/: Datafix-Common.html  Datafix-Denotational.html  Datafix-Description.html  Datafix-Explicit.html  Datafix-MonoMap.html  Datafix-NodeAllocator.html  Datafix-ProblemBuilder.html  Datafix-Tutorial.html  Datafix-Utils-Constraints.html  Datafix-Utils-TypeLevel.html  Datafix-Worklist-Denotational.html  Datafix-Worklist-Graph-Dense.html  Datafix-Worklist-Graph-Sparse.html  Datafix-Worklist-Graph.html  Datafix-Worklist-Internal.html  Datafix-Worklist.html  Datafix.html  datafix.haddock  datafix.txt  doc-index.html  index.html
datafix-0.0.0.2/src/: Datafix.Common.html  Datafix.Denotational.html  Datafix.Description.html  Datafix.Explicit.html  Datafix.IntArgsMonoMap.html  Datafix.ProblemBuilder.html  Datafix.Tutorial.html  Datafix.Utils.Constraints.html  Datafix.Utils.GrowableVector.html  Datafix.Worklist.Graph.Dense.html  Datafix.Worklist.Graph.Sparse.html  Datafix.Worklist.Graph.html  Datafix.Worklist.Internal.html  Datafix.Worklist.html  Datafix.html
datafix-0.0.0.3/: Datafix-Common.html  Datafix-Denotational.html  Datafix-Explicit.html  Datafix-MonoMap.html  Datafix-NodeAllocator.html  Datafix-ProblemBuilder.html  Datafix-Tutorial.html  Datafix-Utils-Constraints.html  Datafix-Utils-TypeLevel.html  Datafix-Worklist-Denotational.html  Datafix-Worklist-Graph-Dense.html  Datafix-Worklist-Graph-Sparse.html  Datafix-Worklist-Graph.html  Datafix-Worklist-Internal.html  Datafix-Worklist.html  Datafix.html  datafix.haddock  datafix.txt  doc-index.html  doc-index.json  index.html
datafix-0.0.0.3/src/: Datafix.Common.html  Datafix.Denotational.html  Datafix.Entailments.html  Datafix.Explicit.html  Datafix.IntArgsMonoMap.html  Datafix.IntArgsMonoSet.html  Datafix.MonoMap.html  Datafix.NodeAllocator.html  Datafix.ProblemBuilder.html  Datafix.Tutorial.html  Datafix.html  (+9 more)
datafix-0.0.1.0/: Datafix-Common.html  Datafix-Denotational.html  Datafix-Explicit.html  Datafix-FrameworkBuilder.html  Datafix-MonoMap.html  Datafix-NodeAllocator.html  Datafix-Tutorial.html  Datafix-Utils-Constraints.html  Datafix-Utils-TypeLevel.html  Datafix-Worklist-Denotational.html  Datafix-Worklist-Graph-Dense.html  Datafix-Worklist-Graph-Sparse.html  Datafix-Worklist-Graph.html  Datafix-Worklist-Internal.html  Datafix-Worklist.html  Datafix.html  datafix.haddock  datafix.txt  doc-index.html  doc-index.json  index.html
datafix-tests/: LICENSE  Setup.hs  datafix-tests.cabal  examples
datafix-tests/bench/: Main.hs
datafix-tests/exprs/: findLT.hs  kahan.hs  sieve.hs
datafix-tests/schemes/: scheme1.html  scheme2.html
datafix-tests/tests/: Critical.hs  FirstFollow.hs  Main.hs  StrAnal.hs  Trivial.hs  doctest.hs
datafix/common/Datafix/Utils/: Entailments.hs  IntArgsMonoMap.hs  IntArgsMonoSet.hs  MonoMap.hs  SemiLattice.hs  TypeLevel.hs
datafix/examples/: Mutual.hs  Sum.hs
datafix/examples/Analyses/: AdHocStrAnal.hs  StrAnal.hs
datafix/examples/Analyses/StrAnal/: Analysis.hs  Arity.hs  Strictness.hs
datafix/examples/Analyses/Syntax/: MkCoreFromFile.hs
datafix/examples/Analyses/Templates/: LetDn.hs
datafix/src/: Datafix.hs
datafix/src/Datafix/: Common.hs  Denotational.hs  Explicit.hs  FrameworkBuilder.hs  Tutorial.hs  Worklist.hs
datafix/src/Datafix/Worklist/: Denotational.hs  Graph.hs  Internal.hs
datafix/src/Datafix/Worklist/Graph/: Dense.hs  Sparse.hs
examples/: Fac.hs  Fib.hs  Mutual.hs  Sum.hs
exprs/: const.hs  lambda.hs
pomaps-0.0.2.1/: LICENSE.md
schemes/: README.md  scheme3.html
src/: Datafix.hs  Worklist.hs
test/: Critical.hs  Main.hs  StrAnal.hs  Trivial.hs
tests/: Critical.hs  Main.hs  StrAnal.hs  Trivial.hs
(+63 files in other folders)
