name:                datafix
version:             0.1.0.0
synopsis:            Fixing data-flow problems
description:         Fixing data-flow problems in expression trees

license:             ISC
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           © 2017 Sebastian Graf
homepage:            https://github.com/sgraf812/datafix
bug-reports:         https://github.com/sgraf812/datafix/issues

category:            Compiler
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/sgraf812/datafix

flag use-lattices
  description: Depend on the lattices package.
  default: True

library
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  exposed-modules:   Datafix
  build-depends:     base >= 4.8 && < 5
                   , containers >= 0.5 && < 0.6
                   , transformers < 0.6
                   , pomaps
  if flag(use-lattices)
    build-depends:   lattices < 2
  if !flag(use-lattices)
    hs-source-dirs:  lattices
    exposed-modules: Algebra.Lattice

test-suite datafix-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , containers
                   , transformers < 0.6
                   , datafix
                   , ghc
                   , lattices < 2

test-suite datafix-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , datafix

benchmark datafix-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , datafix