name:                datafix
version:             0.0.0.1
synopsis:            Fixing data-flow problems
description:         Fixing data-flow problems in expression trees

license:             ISC
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           © 2017 Sebastian Graf
homepage:            https://github.com/sgraf812/datafix
bug-reports:         https://github.com/sgraf812/datafix/issues

category:            Compiler
build-type:          Custom
stability:           alpha (experimental)
cabal-version:       >=1.24

extra-source-files:
  README.md
  stack.yaml
  examples/exprs/const.hs
  examples/exprs/findLT.hs
  examples/exprs/kahan.hs
  examples/exprs/lambda.hs
  examples/exprs/sieve.hs

source-repository head
  type:     git
  location: https://github.com/sgraf812/datafix

flag use-lattices
  description: Depend on the lattices package.
  default: True

custom-setup
  setup-depends:
      base
    , Cabal
    -- let cabal-toolkit choose the right Cabal and base versions
    , cabal-toolkit == 0.0.4

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   Datafix
                     Datafix.MonoMap
                     Datafix.NodeAllocator
                     Datafix.IntArgsMonoMap
                     Datafix.IntArgsMonoSet
                     Datafix.Utils.TypeLevel
                     Datafix.Utils.GrowableVector
                     Datafix.Worklist
                     Datafix.Worklist.Graph
                     Datafix.Worklist.Graph.Dense
                     Datafix.Worklist.Graph.Sparse
                     Datafix.Worklist.Internal
  build-depends:     base >= 4.8 && < 5
                   , containers >= 0.5 && < 0.6
                   , transformers < 0.6
                   -- Just Data.Vector.Mutable, which has been there for ages
                   , vector < 0.13
                   -- Data.Primitive.Array.sizeofArray was introduced in 0.6.2.0
                   , primitive >= 0.6.2.0 && < 0.7
                   -- has not reached the first major version, so quite unstable
                   , pomaps < 0.0.1.0
  if flag(use-lattices)
    build-depends:   lattices < 2
  if !flag(use-lattices)
    hs-source-dirs:  lattices
    exposed-modules: Algebra.Lattice

test-suite datafix-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test examples
  main-is:           Main.hs
  other-modules:     Analyses.AdHocStrAnal
                     Analyses.StrAnal
                     Analyses.StrAnal.Analysis
                     Analyses.StrAnal.Arity
                     Analyses.StrAnal.Strictness
                     Analyses.Syntax.CoreSynF
                     Analyses.Syntax.MkCoreHelpers
                     Analyses.Syntax.MkCoreFromFile
                     Analyses.Templates.LetDn
                     Fib
                     Fac
                     Mutual
                     Critical
                     Trivial
                     StrAnal
  build-depends:     base >= 4.8 && < 5
                   -- let cabal-toolkit choose the Cabal version
                   , Cabal
                   , cabal-toolkit == 0.0.4
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , containers
                   , primitive
                   , transformers < 0.6
                   , datafix
                   , ghc
                   , ghc-paths
                   , directory
                   , filepath
                   , turtle
                   , text
                   , lattices < 2

test-suite datafix-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , datafix

benchmark datafix-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    benchmark examples
  main-is:           Main.hs
  other-modules:     Sum
                     Analyses.AdHocStrAnal
                     Analyses.StrAnal
                     Analyses.StrAnal.Analysis
                     Analyses.StrAnal.Arity
                     Analyses.StrAnal.Strictness
                     Analyses.Syntax.CoreSynF
                     Analyses.Syntax.MkCoreHelpers
                     Analyses.Syntax.MkCoreFromFile
                     Analyses.Templates.LetDn
  build-depends:     base >= 4.8 && < 5
                   -- let cabal-toolkit choose the Cabal version
                   , Cabal
                   , cabal-toolkit == 0.0.4
                   , criterion >= 1.1
                   , deepseq
                   , containers
                   , primitive
                   , transformers < 0.6
                   , datafix                   
                   , ghc
                   , ghc-paths
                   , directory
                   , filepath
                   , turtle
                   , text
                   , lattices < 2
