name:                worklist
version:             0.1.0.0
synopsis:            Unobtrusive worklist algorithm
description:         An unobtrusive implementation of the worklist algorithm.

license:             ISC
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           © 2016 Sebastian Graf
homepage:            https://github.com/sgraf812/worklist
bug-reports:         https://github.com/sgraf812/worklist/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/sgraf812/worklist

library
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  exposed-modules:   Worklist
  build-depends:     base >= 4.8 && < 5
                   , containers >= 0.5 && < 0.6
                   , transformers < 0.6

test-suite worklist-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , containers
                   , worklist

test-suite worklist-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , worklist

benchmark worklist-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , worklist
